# japandata

./: .gitignore  LICENSE.md  Makefile  README.md  downloads.json  pyproject.toml  requirements.txt  setup.cfg
examples/: furusatonouzei.ipynb  population_age_japan.ipynb  population_japan.ipynb  population_japan_example.ipynb
examples/indices_local_output/: strength_vs_burden.html
examples/indices_prefecture_output/: economic_strength.html  mean_burden_vs_time.html  strength_vs_time.html
examples/maps_example/: pref_interactive.html
examples/maps_output/: pref_interactive.html
examples/population_local_example/: birth_vs_death.html  natural-vs-social.html
examples/population_local_output/: birth_vs_death.html  natural-vs-social.html
examples/population_prefecture_example/: birth_vs_death.html  growth_vs_pop.html  growth_vs_time.html  migration.html  naturaldeclinerate.html  population_vs_time.html
examples/population_prefecture_output/: birth_vs_death.html  growth_vs_pop.html  growth_vs_time.html  migration.html  naturaldeclinerate.html  population_vs_time.html
japandata/: __main__.py  utils.py
japandata/chihoukoufuzei/: data.py
japandata/download/: __init__.py  download.py
japandata/indices/: __init.__.py  __init__.py  data.py  indices.py
japandata/maps/: __init__.py  data.py  maps.py
japandata/population/: __init__.py  data.py  population.py
japandata/readings/: __init__.py  data.py  readings.py
notebooks/: Untitled.ipynb  indices.ipynb  maps.ipynb  population.ipynb  population_japan.ipynb  readings.ipynb
notebooks/indices_prefecture_output/: burden_vs_time.html  mean_strength_vs_time.html
notebooks/population_local_output/: birth_vs_death.html
notebooks/population_prefecture_output/: birth_vs_death.html  growth_vs_pop.html  growth_vs_time.html  population_vs_time.html
requirements/: requirements-dev.txt  requirements-viz.txt  requirements.txt
src/japandata/chihoukoufuzei/: data.py  source.md
src/japandata/chihoukoufuzei/chihoukoufuzeidata/: 2015-demand.xls  2015-income.xls  2015.xlsx  2016-demand.xls  2016-income.xls  2016.xlsx  2017.xlsx  2018-income.xls  2019-demand.xls  2019-income.xls  2020-demand.xlsx  2020.xlsx  2021-demand.xlsx  2021.xlsx  2022-income.xls
src/japandata/chihoukoufuzei/chihoukoufuzeidata/muni/: 2015-demand.xls  2016-demand.xls  2017-demand.xls  2017-income.xls  2018-demand.xls  2018.xlsx  2019.xlsx  2020-income.xls  2021-income.xls  2022-demand.xlsx  2022.xlsx
src/japandata/chihoukoufuzei/chihoukoufuzeidata/pref/: 2015-demand.xlsx  2015-income.xls  2015.xls  2016-demand.xlsx  2016-income.xls  2016.xls  2017-demand.xlsx  2017.xls  (+15 more)
src/japandata/furusatonouzei/: data.py
src/japandata/indices/: data.py
src/japandata/maps/: data.py
src/japandata/population/: data.py
src/japandata/readings/: data.py
src/japandata/readings/readingsdata/: R2_loss.xlsx
