[metadata]
name = JapanData
version = 0.4.1
author = Sam Passaglia
description = Data about Japan
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/passaglia/japandata
project_urls =
    Bug Tracker = https://github.com/passaglia/japandata/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
packages = japandata
python_requires = >=3.6
install_requires = 
    matplotlib
    numpy
    romkan
    jaconv

include_package_data = True
